Fixed issue with layout-table being broken in ACE-editor. (RM-1729)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@14605 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/SecurityManager/Clients.Web/res/Themes/ClassicBlue/Html/Style.css
+++ b/SecurityManager/Clients.Web/res/Themes/ClassicBlue/Html/Style.css
@@ -20,6 +20,12 @@ form
   width: 100%;
 }
 
+/* IE7 only */
+*:first-child+html div.content 
+{
+  width: auto !important;
+}
+
 div#ErrorContainer
 {
   color: Red;
@@ -96,6 +102,17 @@ td.stateCombinationsButtons
   vertical-align: top;  
 }
 
+/* IE7 only */
+*:first-child+html td.stateCombinationsButtons button.webButton
+{
+  max-width: 94%;
+}
+/* IE6 only */
+* html td.stateCombinationsButtons button.webButton
+{
+  width: 96%;
+}
+
 td.accessControlEntriesButtons,
 td.accessControlEntriesContainer
 {
@@ -120,7 +137,7 @@ table.accessControlEntriesTable
 {
   border-collapse: collapse;
   border-style: none;
-  width: 100%;
+  width: auto;
 }
 
 table.accessControlEntriesTable th.titleCellHorizontal,
